# KamilDefense

./: .gitignore  CMakeLists.txt  GameSettings.ini  LICENSE.md  README.md
data/: TestLevel.lvl
source/: Background.cpp  Background.hpp  Border.cpp  Border.hpp  BoxCollider.hpp  CollisionChecker.cpp  CollisionChecker.hpp  CollisionSolver.cpp  CollisionSolver.hpp  Damagable.cpp  Damagable.hpp  Drawable.hpp  Enemy.cpp  Enemy.hpp  EnemySpawner.cpp  EnemySpawner.hpp  Entity.hpp  GameConfig.hpp  Level.cpp  Level.hpp  Missile.cpp  Missile.hpp  MissileManager.cpp  MissileManager.hpp  PhysicChecker.cpp  PhysicChecker.hpp  PhysicsChecker.cpp  PhysicsChecker.hpp  PlayState.cpp  PlayState.hpp  Player.cpp  Player.hpp  PlayerBase.cpp  PlayerBase.hpp  ResourceHolder.cpp  ResourceHolder.hpp  ResourceWrapper.hpp  Settings.cpp  Settings.hpp  Types.hpp  (+1 more)
source/entities/: AnimatedDrawable.cpp  AnimatedDrawable.hpp  Background.cpp  Background.hpp  Border.cpp  Border.hpp  BoxCollider.hpp  Damagable.cpp  Damagable.hpp  Enemy.cpp  Enemy.hpp  EnemySpawner.cpp  EnemySpawner.hpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  Missile.cpp  Missile.hpp  Player.cpp  Player.hpp  PlayerBase.cpp  PlayerBase.hpp
source/framework/: Config.hpp  INIparser.cpp  INIparser.hpp  Logger.cpp  Logger.hpp  State.cpp  State.hpp  StateMachine.cpp  StateMachine.hpp
source/gameUtil/: CollisionChecker.cpp  CollisionChecker.hpp  CollisionSolver.cpp  CollisionSolver.hpp  Level.cpp  Level.hpp  MissileManager.cpp  MissileManager.hpp
source/menuUtil/: Button.cpp  Button.hpp
source/states/: MenuState.cpp  (+3 more)
(+3 files in other folders)
